<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_background"
        app:layout_constraintBottom_toTopOf="@id/btnLogIn"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@id/ivBackground"
        app:layout_constraintEnd_toStartOf="@id/tvLogo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/font_comfortaa"
        android:gravity="center"
        android:text="@string/photo"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="@id/ivLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastSignedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/last_signed_in"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="@id/tvEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/ivBackground"
        app:layout_constraintStart_toStartOf="@id/ivBackground"
        tools:text="\@pawel_czerwinski" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/ic_rectangle"
        android:fontFamily="sans-serif"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBackground" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/ic_rectangle"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnLogIn"
        app:layout_constraintTop_toBottomOf="@id/ivBackground" />


</androidx.constraintlayout.widget.ConstraintLayout>